# SpatialPartitioningStructures

./: .gitmodules  CMakeLists.txt  README.md
KDTree/: CMakeLists.txt  KDTree.cpp  KDTree.h  Test.cpp
Shared/: Types.h
